--- a/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
@@ -137,6 +137,11 @@
                             title="Opción que permite Buscar/Editar y Agregar Instituciones que usa SICDOC">
                         <img src="/assets/icons/comunicacion/group_24x24.png" class="d-inline-block align-top" alt="">
                       Agregar / Editar Instituciones</a>
+                      <hr>
+                    <a class="dropdown-item" [routerLink]="['/contactos/contactos-sreci']" routerLinkActive="active"
+                            title="Contactos de SICDOC">
+                        <img src="/assets/icons/comunicacion/networking_24x24.png" class="d-inline-block align-top" alt="">
+                      Contactos</a>
                     <!-- <li class="nav-item dropdown"><a class="dropdown-item" [routerLink]="['mantenimiento-instituciones']" routerLinkActive="active">Solicitud de Cambio d Fecha</a></li> -->
 
                 <!-- <hr> -->
