--- a/Angular_SICDOC/sicdoc/src/app/components/correspondencia/correspondencia.entrada/correspondencia.entrada.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/correspondencia/correspondencia.entrada/correspondencia.entrada.component.html
@@ -71,7 +71,7 @@
             <hr class="hr-new">
             <!-- Tema y Descripcion de la Comunicacion -->
             <div class="row">
-                <div class="col-xs-12 col-sm-9 col-md-9">
+                <div class="col-xs-12 col-sm-8 col-md-8">
                 <small class="form-text text-muted">
                     Tema de la Correspondencia
                 </small>
@@ -126,7 +126,7 @@
 
             <div class="row" >
                 <!-- Direccion Encargada del tema de la Comunicacion -->
-                <div class="col-xs-12 col-sm-6 col-md-6">
+                <div class="col-xs-12 col-sm-8 col-md-8">
                   <div class="form-group">
                     <!-- <h6>Unidad Responsable</h6> -->
                     <small class="form-text text-muted">
@@ -252,9 +252,9 @@
                                <td class="text-center" >{{ suchnewrow.extDoc }}</td>
                                <td class="text-center">{{ suchnewrow.pesoDoc }}</td>
                                <td class="text-center"> <a title="Has Clic sobre la Imagen para ver con detalle el contenido..."
-                                       href="{{ urlComplete + suchnewrow.nameDoc + '.' + suchnewrow.extDoc }}" target="_blank" >
+                                       href="{{ urlComplete + suchnewrow.nameDoc }}" target="_blank" >
                                  <img style="width:60px; height:60px; box-shadow:8px 10px 5px 0px #888888"
-                                   src="{{ urlComplete + suchnewrow.nameDoc + '.' + suchnewrow.extDoc }}"
+                                   src="{{ urlComplete + suchnewrow.nameDoc }}"
                                    onerror="this.src='assets/icons/media/question-class-note-symbol-128x128.png'"
                                    alt="Cargando Imagen ..." ></a>
                                </td>
