--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.css
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.css
@@ -69,5 +69,49 @@
 }
 
 .panel-body {
- padding-top: 30px !important;
+ padding-top: 20px !important;
 }
+
+.hr-new {
+  border: 1px solid #30A7EE;
+  border-radius: 200px /8px;
+  height: 0px;
+  width: 90%;
+  text-align: center;
+ }
+
+ /* Seccion de fieldset */
+ fieldset.scheduler-border {
+     border: 1px groove #ddd !important;
+     /* padding: 0 1.4em 1.4em 1.4em !important; */
+     margin: 0 0 1.5em 0 !important;
+     -webkit-box-shadow:  0px 0px 0px 0px #000;
+             box-shadow:  0px 0px 0px 0px #000;
+ }
+
+ legend.scheduler-border {
+     width:inherit; /* Or auto */
+     padding:0 10px; /* To give a bit of padding on the left and right */
+     border-bottom:none;
+ }
+
+ .text-on-pannel {
+   background: #fff none repeat scroll 0 0;
+   height: auto;
+   margin-left: 2px;
+   padding: 5px 0 0 10px;
+   position: absolute;
+   margin-top: -40px;
+   border: 1px solid #337ab7;
+   border-radius: 6px;
+   width: auto;
+ }
+
+ .panel {
+   /* for text on pannel */
+   margin-top: 10px !important;
+ }
+
+ .panel-body {
+   padding-top: 30px !important;
+ }
